removed console.log

--- a/task4.html
+++ b/task4.html
@@ -35,7 +35,7 @@
 
 
         var traverse = (rootNode, str = '') => {
-            console.log(rootNode, rootNode.val, str);
+            // console.log(rootNode, rootNode.val, str);
 
             if (rootNode.left) {
                 str += traverse(rootNode.left);
